--- a/.github/workflows/render-and-publish.yml
+++ b/.github/workflows/render-and-publish.yml
@@ -10,11 +10,11 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
-        
+
       - name: Set up R (needed for Rmd)
         uses: r-lib/actions/setup-r@v2
 
-      - name: Install packages (needed for Rmd)
+      - name: Install packages (needed for Rmd) using renv
         uses: r-lib/actions/setup-renv@v2
 
       - name: Set up Quarto
