--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,6 +31,8 @@ website:
           file: "assets/hera_documentation.qmd"
         - text: "Submitting an array job" 
           file: assets/array_hera.qmd
+        - text: "Working with Open Science Grid"
+          file: "assets/osg_documentation.qmd"
       - section: "Contact us"
         contents:
         - text: "Nicholas Ducharme-Barth"
