ss3: hera workflow

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,12 @@
 site_libs
 *.sif
 *.tar.gz
+# ignore SS output
+*.ss
+*.tmp
+*.sso
+fmin.log
+ss3_linux.log
+ss3-example-calcs.r
+ss3.*
+*.ss_new
