add doc to website

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -37,6 +37,8 @@ website:
           file: "assets/osg_documentation.qmd"
         - text: "Submitting an array job with OSG"
           file: "assets/array_osg.qmd"
+        - text: "Running an array of SS3 jobs on OSG" 
+          file: assets/ss3-osg.qmd
       - section: "Contact us"
         contents:
         - text: "Nicholas Ducharme-Barth"
